--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,19 @@
     <groupId>me.andredezzy</groupId>
     <artifactId>exercises-runner</artifactId>
     <version>1.0-SNAPSHOT</version>
-    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.reflections</groupId>
